--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
+    "start": "set NODE_ENV=dev&& npm run buildProd && electron .",
+    "startDev": "set NODE_ENV=dev&& npm run buildDev && electron .",
     "buildDev": "webpack --config \"./config/webpack.dev.js\"",
     "buildProd": "webpack --config \"./config/webpack.prod.js\"",
     "buildStandalone": "electron-builder build --win portable"
